--- a/SecondMLModel/SecondMLModel.csproj
+++ b/SecondMLModel/SecondMLModel.csproj
@@ -100,6 +100,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsumeModel.cs" />
+    <Compile Include="InputModel.cs" />
+    <Compile Include="OutputModel.cs" />
+    <Compile Include="OutputModelForBarometry.cs" />
+    <Compile Include="OutputModelForDensity.cs" />
+    <Compile Include="OutputModelForMeasurement.cs" />
+    <Compile Include="OutputModelForThermometry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
