--- a/BuildModelsConsole/BuildModelsConsole.csproj
+++ b/BuildModelsConsole/BuildModelsConsole.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuildFirstMLModel.cs" />
+    <Compile Include="BuildSecondMLModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
